# Lock-N-Key

./: .env.cloud  .env.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  directions.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
api/: deps.py  main.py  schemas.py
dk_ncaab/: README.md  __init__.py  __main__.py
memory/: README.md  current-state.md  data-pipeline-and-ops.md  deep-dive-2026-04-20.md  deep-dive-2026-05-02.md  deployment-readiness-2026-05-05.md  entry-ev-modeling.md  espn-schedule-results.md  known-risks.md  mlb-historical-data-sources.md  modeling-and-backtests.md  odds-quota-accounting.md  repo-map.md  sport-provider-registry.md  ui-and-api.md
plans/: deployment-stabilization-plan.md  gcp-vm-orchestration-plan.md  master-execution-plan.md  ncaab-sportsbook-metrics-roadmap.md  private-odds-dashboard-roadmap.md  production-foundation.md  provider-decision-gate.md  sprint-01-debian-tailscale-commands.md  sprint-01-orchestrated-taskboard.md  sprint-02-alerting-and-backup.md  three-sprint-odds-workstation-plan.md
scripts/: backup_sqlite_to_gcs.sh  check_recent.py  check_sportsbook_board_screenshots.py  cron_collect_cycle.sh  debug_dupes.py  debug_join.py  debug_match_event.py  debug_matching.py  debug_odds_deep.py  debug_odds_status.py  debug_past_events.py  deploy.ps1  deploy.sh  dump_teams.py  find_missing_teams.py  inspect_dom.py  install_cron_jobs.sh  install_systemd_services.sh  migrate_odds_events.py  monitor_health.sh  preflight_secrets.sh  prune_vm_data.sh  restore_sqlite_backup.sh  (+13 more)
(+106 files in other folders)
