[project]
name = "dk-ncaab"
version = "0.1.0"
description = "DraftKings NCAAB odds, splits, and closing-line prediction pipeline"
requires-python = ">=3.11"
dependencies = [
    # DB
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # HTTP
    "httpx>=0.27",
    # Config
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    # Scraping
    "playwright>=1.42",
    # Scheduling
    "apscheduler>=3.10",
    # Data / ML
    "pandas>=2.2",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "shap>=0.45",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "joblib>=1.3",
    # Logging
    "structlog>=24.1",
    # API + UI
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.38",
    "plotly>=5.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dk_ncaab*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
